# ARCOSpx-publication

./: .gitignore  README.md  index.html  pyproject.toml  sakura.css
data/: README.md
scripts/1_wave_simulation/: README.md  calc_effect_size.Rmd  cellular_automaton.py  evaluation_metrics_bbox.py  plot_eval.ipynb  plot_eval_multiple.ipynb  plot_sweep.ipynb  simulation_tracking.py  submit_evaluation_batch_bbox.sh  submit_simulation_run_snr_batch.sh  trackmate_bridge.py
scripts/1_wave_split_merge_sim/: README.md  analyze_summary.rmd  compare_sim_track.ipynb  sim_split_merge.ipynb  track_split_merge.ipynb
scripts/2_synthetic_rhoa_wave/: README.md  arcospx_synthetic_wave.ipynb  synthetic_wave_sim.ipynb
scripts/3_podosome_tracks/: README.md  convpaint_model.joblib  convpaint_model_2.joblib  convpaint_model_3.joblib  convpaint_params.yml  podosome-dynamics-4treat-20250212.Rmd  podosomes_arcos_px.ipynb  podosomes_arcos_px_lineage_tracking_and_surviva.ipynb
scripts/3_podosome_tracks/3a_single_cell/: 20250217_convpaint.pickle  podosomes_arcos_px_single_fov.ipynb
scripts/3_podosome_tracks/3b_lineage_tracking/: convpaint_batch.py  convpaint_model  podosome-dynamics-4treat-20250212.Rmd  slurm_batch_convpaint.sh  slurm_batch_tracking.sh  tracks_extraction.py
scripts/4_polymerization_wave/: README.md  polymerization_wave_processing.ipynb  polymerization_wave_tracking.ipynb
scripts/5_hole_tracking/: README.md  convpaint_model.joblib  convpaint_params.yml  hole_tracking_arcos_px.ipynb
scripts/6_others/: seed_clusters_and_instance_tracking_demo.ipynb
(+5 files in other folders)
